feat: allow profile updates for users
